# cookiecutter-serverless-python

./: README.md  cookiecutter.json  package-lock.json  pyproject.toml
.github/workflows/: cookiecutter-test.yml
hooks/: post_gen_project.py  pre_gen_project.py
{cookiecutter.github_repository_name}}/: Makefile  Makefile_windows  README.md  app.py
{cookiecutter.github_repository_name}}/.github/workflows/: serverless-service.yml
{cookiecutter.github_repository_name}}/cdk/{{cookiecutter.app_name}}/: api_construct.py  api_db_construct.py  service_stack.py
{cookiecutter.github_repository_name}}/cdk/{{cookiecutter.app_name}}/configuration/: configuration_construct.py
{cookiecutter.github_repository_name}}/tests/: utils.py
{cookiecutter.github_repository_name}}/tests/e2e/: test_create_order.py
{cookiecutter.github_repository_name}}/tests/infrastructure/: test_cdk.py
{cookiecutter.github_repository_name}}/tests/integration/: conftest.py  test_create_order.py
{cookiecutter.github_repository_name}}/tests/unit/: test_create_order_input.py  test_create_order_output.py  test_db_handler.py  test_env_vars_parser.py  test_parse_configuration.py
{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/dal/: db_handler.py  dynamo_dal_handler.py
{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/handlers/: create_order.py
{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/handlers/utils/: dynamic_configuration.py
{cookiecutter.github_repository_name}}/{{cookiecutter.app_name}}/logic/: handle_create_request.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  LICENSE  Makefile  Makefile_windows  README.md  app.py  cdk.json  generate_openapi.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml
{{cookiecutter.repo_name}}/.github/workflows/: main-serverless-service.yml  pr-serverless-service.yml  serverless-service.yml
{{cookiecutter.repo_name}}/cdk/: setup.py
{{cookiecutter.repo_name}}/cdk/{{cookiecutter.service_name}}/: api_construct.py  api_db_construct.py  constants.py  monitoring.py  service_stack.py  utils.py
{{cookiecutter.repo_name}}/cdk/{{cookiecutter.service_name}}/configuration/: configuration_construct.py
{{cookiecutter.repo_name}}/docs/swagger/: openapi.json
{{cookiecutter.repo_name}}/service/schemas/: output.py
{{cookiecutter.repo_name}}/tests/: utils.py
{{cookiecutter.repo_name}}/tests/e2e/: conftest.py  test_create_order.py  test_delete_order.py  test_get_order.py
{{cookiecutter.repo_name}}/tests/infrastructure/: test_cdk.py
{{cookiecutter.repo_name}}/tests/integration/: conftest.py  test_create_order.py  test_delete_order.py  test_feature_flags.py  test_get_order.py
{{cookiecutter.repo_name}}/tests/unit/: test_create_order_input.py  test_create_order_output.py  test_dal_schema.py  test_db_handler.py  test_delete_order_output.py  test_env_vars_parser.py  test_get_order_output.py  test_parse_configuration.py
{{cookiecutter.repo_name}}/{{cookiecutter.service_name}}/dal/: __init__.py  db_handler.py  dynamo_dal_handler.py
{{cookiecutter.repo_name}}/{{cookiecutter.service_name}}/dal/models/: db.py
{{cookiecutter.repo_name}}/{{cookiecutter.service_name}}/handlers/: create_order.py  handle_create_order.py  handle_delete_order.py  handle_get_order.py
{{cookiecutter.repo_name}}/{{cookiecutter.service_name}}/handlers/utils/: dynamic_configuration.py  idempotency.py  rest_api_resolver.py
{{cookiecutter.repo_name}}/{{cookiecutter.service_name}}/logic/: create_order.py  delete_order.py  get_order.py  handle_create_request.py
{{cookiecutter.repo_name}}/{{cookiecutter.service_name}}/logic/utils/: idempotency.py
{{cookiecutter.repo_name}}/{{cookiecutter.service_name}}/models/: output.py
