[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cookiecutter-serverless-python"
version = "1.0.0"
description = "This repository provides a working, deployable, open source based, AWS Lambda handler and CDK Python code. This handler embodies Serverless best practices and has all the bells and whistles for a proper production ready handler"
authors = [{name = "Ran Isenberg"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.14",
]
readme = "README.md"
keywords = ["aws lambda cookbook", "guide to aws lambda", "cdk blueprint", "best practices", "serverless service blueprint"]
license = {text = "MIT-0"}
requires-python = ">=3.14"
dependencies = [
    "cookiecutter",
]

[project.urls]
Repository = "https://github.com/ran-isenberg/aws-lambda-handler-cookbook"

[dependency-groups]
dev = [
    "toml",
]

